--- a/testimonial1/index.html
+++ b/testimonial1/index.html
@@ -4,14 +4,13 @@
  <title></title>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" media="mediatype" href="assets/css/style.css">
  <!-- owl-carousel -->
  <link rel="stylesheet" href="assets/css/owl.carousel.css">
  <link rel="stylesheet" href="assets/css/owl.theme.default.css">
  <!--    font-awesome -->
  <link rel="stylesheet" href="assets/css/font-awesome.css">
  <!-- bootstrap-css -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -19,71 +18,71 @@
 =            testimonial-section            =
 ==========================================-->
 
-<section id="header">
-  <div class="wrapper">
-    <div class="owl-carousel owl-theme practice-slider">
+<section id="mwb-header">
+  <div class="mwb-wrapper">
+    <div class="owl-carousel owl-theme mwb-practice-slider">
     
-      <div class="item">
-        <div class="heading">
-          <i class="fa fa-quote-left icon" aria-hidden="true"></i>
-          <h2 class="testimonial_para"> Don't try to be original,just try to be good.</h2>
+      <div class="mwb-item">
+        <div class="mwb-heading">
+          <i class="fa fa-quote-left mwb-icon"></i>
+          <h2 class="mwb-testimonial_para"> Don't try to be original,just try to be good.</h2>
           <h4>John Doe</h4>
           <p>Graphic designer</p>
-          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="picture">
+          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="mwb-picture">
         </div>
       </div>
-      <div class="item">
-        <div class="heading">
-          <i class="fa fa-quote-left icon" aria-hidden="true"></i>
-          <h2 class="testimonial_para"> Don't try to be original,just try to be good.</h2>
+      <div class="mwb-item">
+        <div class="mwb-heading">
+          <i class="fa fa-quote-left mwb-icon"></i>
+          <h2 class="mwb-testimonial_para"> Don't try to be original,just try to be good.</h2>
           <h4>John Doe</h4>
           <p>Graphic designer</p>
-          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="picture">
+          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="mwb-picture">
         </div>
       </div>
-      <div class="item">
-        <div class="heading">
-          <i class="fa fa-quote-left icon" aria-hidden="true"></i>
-          <h2 class="testimonial_para"> Don't try to be original,just try to be good.</h2>
+     <div class="mwb-item">
+        <div class="mwb-heading">
+          <i class="fa fa-quote-left mwb-icon"></i>
+          <h2 class="mwb-testimonial_para"> Don't try to be original,just try to be good.</h2>
           <h4>John Doe</h4>
           <p>Graphic designer</p>
-          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="picture">
+          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="mwb-picture">
         </div>
       </div>
-      <div class="item">
-        <div class="heading">
-          <i class="fa fa-quote-left icon" aria-hidden="true"></i>
-          <h2 class="testimonial_para"> Don't try to be original,just try to be good.</h2>
+      <div class="mwb-item">
+        <div class="mwb-heading">
+          <i class="fa fa-quote-left mwb-icon"></i>
+          <h2 class="mwb-testimonial_para"> Don't try to be original,just try to be good.</h2>
           <h4>John Doe</h4>
           <p>Graphic designer</p>
-          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="picture">
+          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="mwb-picture">
         </div>
       </div>
-      <div class="item">
-        <div class="heading">
-          <i class="fa fa-quote-left icon" aria-hidden="true"></i>
-          <h2 class="testimonial_para"> Don't try to be original,just try to be good.</h2>
+      <div class="mwb-item">
+        <div class="mwb-heading">
+          <i class="fa fa-quote-left mwb-icon"></i>
+          <h2 class="mwb-testimonial_para"> Don't try to be original,just try to be good.</h2>
           <h4>John Doe</h4>
           <p>Graphic designer</p>
-          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="picture">
+          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="mwb-picture">
         </div>
       </div>
-      <div class="item">
-        <div class="heading">
-          <i class="fa fa-quote-left icon" aria-hidden="true"></i>
-          <h2 class="testimonial_para"> Don't try to be original,just try to be good.</h2>
+      <div class="mwb-item">
+        <div class="mwb-heading">
+          <i class="fa fa-quote-left mwb-icon"></i>
+          <h2 class="mwb-testimonial_para"> Don't try to be original,just try to be good.</h2>
           <h4>John Doe</h4>
           <p>Graphic designer</p>
-          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="picture">
+          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="mwb-picture">
         </div>
       </div>
-      <div class="item">
-        <div class="heading">
-          <i class="fa fa-quote-left icon" aria-hidden="true"></i>
-          <h2 class="testimonial_para"> Don't try to be original,just try to be good.</h2>
+      <div class="mwb-item">
+        <div class="mwb-heading">
+          <i class="fa fa-quote-left mwb-icon"></i>
+          <h2 class="mwb-testimonial_para"> Don't try to be original,just try to be good.</h2>
           <h4>John Doe</h4>
           <p>Graphic designer</p>
-          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="picture">
+          <img src="assets/images/til-jentzsch-403167-unsplash.jpg" class="mwb-picture">
         </div>
       </div>
 
